<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Property King</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading....</string>
    <string name="logalrt">Login Please!!!</string>

    <!-- Settings -->
    <string name="signup">SignUp</string>
    <string name="ok">Ok</string>
    <string name="payment">Payment</string>
    <string name="buy">Buy</string>
    <string name="shareEml">Testimonials</string>
    <string name="news">News</string>
    <string name="share">Share</string>
    <string name="dpa">Property Investment app provides the latest properties that are around australia.</string>
    <string name="message">Message</string>
    <string name="rateapp">Rate App</string>
    <string name="register">Registration</string>
    <string name="logout">Logout</string>
    <string name="dialog_submit">Login</string>
    <string name="login">Login</string>
    <string name="rrig">Submit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_uname">Please enter your Email</string>
    <string name="dialog_pass">Please enter your Password</string>
    <string name="createnewaccount"><u>Create New Account</u></string>
    <string name="sdcardmsg1">Sorry no memory card Found</string>
    <string name="sdcardmsg2">SDCard is wirte protected, can not save content</string>
    <string name="nipcyns">No Internet, Please check your network settings</string>
    <string name="pesk">Please enter search key</string>
    <string name="isr">Invalid server response</string>
    <string name="sct">Server connection timeout.!</string>
    <string name="snr1">Server not reachable.!</string>
    <string name="iurl">Invalid URL</string>
    <string name="snr2">Server not reachable.!!</string>
    <string name="snr3">Server not reachable.!!!</string>
    <string name="cerr">Connection Error</string>
    <string name="isres">Invalid server response :</string>
    <string name="edcpda">Error, while downloading the content. Please download again</string>
    <string name="ftu">Failed to upload.!!!</string>
    <string name="yhctr">You have cancelled the request</string>
    <string name="yhcdr">You have cancelled download request.</string>
    <string name="subscribeNow">Subscribe Now</string>
    <string name="subscribe">You can not download this file.</string>
    <string name="pwait">Please wait....</string>
    <string name="peyfn">Please enter your first name</string>
    <string name="peyln">Please enter your last name</string>
    <string name="pepin">Please enter pin</string>
    <string name="peavpin">Please enter a valid pin</string>
    <string name="peei">Please enter Email Id</string>
    <string name="peavei">Please enter a valid Email Id</string>
    <string name="peMsisdn">Please enter mobile number</string>
    <string name="peavei1">Invalid Email Id</string>
    <string name="psmbc123">Error-Invalid UserName/Password</string>
    <string name="psmbc">Password strength must be 8&#8211;16 characters</string>
    <string name="peavccEi">Please enter a valid Cc Email Id</string>
    <string name="peavbccEi">Please enter a valid Bcc Email Id</string>
    <string name="emc">Enter Minimum 8 characters</string>
    <string name="pePswd">Please enter password</string>
    <string name="pecPswd">Please enter confirm password</string>
    <string name="peavPswd">Please enter a valid password</string>
    <string name="pes">Please enter subject</string>
    <string name="eiaceidrnc_old">Email ID and confirm Email ID is not correct</string>
    <string name="eiaceidrnc">Email ID didn\'t match</string>
    <string name="cpmm">Confirm password must match</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="uname">Email ID</string>
    <string name="ceid">Confirm Email ID</string>
    <string name="pwd"> Password</string>
    <string name="mob"> Phone Number</string>
    <string name="pecn">Please enter city name</string>
    <string name="pecz">Please enter zip </string>
    <string name="city">City</string>
    <string name="zip">Zip Code</string>
    <string name="pbaep"> Press again to exit the program</string>
    <string name="nocontent">No Videos Found</string>
    <string name="downloading">Processing....</string>
    <string name="minlft"> mins left</string>
    <string name="seclft"> sec left</string>
    <string name="cancel_btn">Cancel</string>
    <string name="retry">Retry</string>
    <string name="viewmore">View More</string>
    <string name="pleasewait">Please wait...</string>
    <string name="search">search</string>
    <string name="refresh">Refresh</string>
    <string name="ylss">Sucessfully Logged Out</string>

</resources>