<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" >
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/reg_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/r_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/uname"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/r_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/fname"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/r_laname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/lname"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/r_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/r_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/mob"
                    android:inputType="number"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/r_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/city"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/r_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/zip"
                    android:inputType="number"
                    android:maxLength="64"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/regiset_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/template_bt_red_bg"
                    android:text="@string/register"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/register_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/submit_btn"
                    android:background="@drawable/template_bt_red_bg"
                    android:text="@string/cancel_btn"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>