<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/arrows_right_black"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/arrows_right_black"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="15dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/news"
            android:textColor="@color/dgrey"
            android:textSize="15sp"></TextView>

        <TextView
            android:id="@+id/tv_monials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/arrows_right_black"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/arrows_right_black"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="15dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/shareEml"
            android:textColor="@color/dgrey"
            android:textSize="15sp"></TextView>

        <TextView
            android:id="@+id/tv_rateapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/arrows_right_black"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/arrows_right_black"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="15dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/rateapp"
            android:textColor="@color/dgrey"
            android:textSize="15sp"></TextView>

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/arrows_right_black"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/arrows_right_black"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingLeft="25dp"
            android:paddingRight="15dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/share"
            android:textColor="@color/dgrey"
            android:textSize="15sp"></TextView>
    </LinearLayout>

</ScrollView>